--- a/thinkpink_app/client/src/styles/App.css
+++ b/thinkpink_app/client/src/styles/App.css
@@ -17,8 +17,8 @@
 }
 
 .App-title {
-  color: #614B50;
-  font-family: 'poppinsbold';
+  color: #614b50;
+  font-family: "poppinsbold";
   text-align: center;
   font-size: 2rem;
 }
@@ -46,12 +46,12 @@
 .App-button_primair {
   font-family: "poppinsextrabold_italic";
   padding: 12px 32px;
-  background-image: linear-gradient(60deg, #FF6D9E, #F980B3);
+  background-image: linear-gradient(60deg, #ff6d9e, #f980b3);
   border: none;
   color: white;
   font-size: 1rem;
   border-radius: 0.5rem;
-  box-shadow: 0rem 0.2rem 0.7rem rgba(248, 128, 178, .5);
+  box-shadow: 0rem 0.2rem 0.7rem rgba(248, 128, 178, 0.5);
   margin-top: 2rem;
   transition: background-image 0.5s;
   cursor: pointer;
@@ -59,7 +59,7 @@
 }
 
 .App-button_primair:hover {
-  box-shadow: 0rem 0.2rem 0.7rem rgba(248, 128, 178, .2);
+  box-shadow: 0rem 0.2rem 0.7rem rgba(248, 128, 178, 0.2);
   transform: scale(1.1);
   transition: transform ease-in-out 0.2s;
 }
@@ -70,8 +70,8 @@
   color: var(--pink-primair);
   padding: 0.5rem 1rem;
   font-size: 1rem;
-  font-family: 'poppinsbold';
-  border-radius: .5rem;
+  font-family: "poppinsbold";
+  border-radius: 0.5rem;
   text-decoration: none;
   margin-right: 1rem;
   transition: all 0.2s;
@@ -82,7 +82,7 @@
   border: 2px solid transparent;
   color: white;
   font-size: 1rem;
-  font-family: 'poppinsbold';
+  font-family: "poppinsbold";
 }
 .App-button_secundair-outline:focus {
   outline: none;
@@ -94,8 +94,8 @@
   color: white;
   padding: 0.5rem 1rem;
   font-size: 1rem;
-  font-family: 'poppinsbold';
-  border-radius: .5rem;
+  font-family: "poppinsbold";
+  border-radius: 0.5rem;
   text-decoration: none;
   transition: all 0.2s;
 }
@@ -105,14 +105,13 @@
   background-color: var(--pink-primair-focus);
 }
 
-
 .App-button_secundair-white {
   background-color: transparent;
   border: 2px solid white;
   color: white;
   padding: 0.5rem 1rem;
   font-size: 1rem;
-  font-family: 'poppinsbold';
+  font-family: "poppinsbold";
   border-radius: 10px;
   margin-top: 3rem;
   text-decoration: none;
@@ -124,9 +123,8 @@
   border: 2px solid transparent;
   color: var(--pink-primair);
   font-size: 1rem;
-  font-family: 'poppinsbold';
+  font-family: "poppinsbold";
 }
-
 
 .App-input_search {
   width: 80vw;
@@ -136,7 +134,7 @@
   padding: 0.6rem;
   padding-left: 0.8rem;
   margin: 2rem;
-  box-shadow: 0rem 0.2rem 0.7rem rgba(248, 128, 178, .2);
+  box-shadow: 0rem 0.2rem 0.7rem rgba(248, 128, 178, 0.2);
 }
 
 .App-backbutton {
@@ -145,11 +143,10 @@
   font-size: 1rem;
   background-color: transparent;
   border: 0 solid transparent;
-  font-family: 'poppinsbold';
+  font-family: "poppinsbold";
   margin-top: 1rem;
   transform: all 0.2s;
 }
-
 
 .App-backbutton_back {
   color: var(--pink-primair);
@@ -157,7 +154,7 @@
   font-size: 1rem;
   background-color: transparent;
   border: 0 solid transparent;
-  font-family: 'poppinsbold';
+  font-family: "poppinsbold";
   margin-top: 1rem;
   opacity: 0.5;
   transform: all 0.2s;
@@ -175,9 +172,9 @@
   outline: none;
 }
 
-
-
-.App-input_search, .App-button_primair, .App-button_secundair:focus {
+.App-input_search,
+.App-button_primair,
+.App-button_secundair:focus {
   outline: none;
 }
 
@@ -190,42 +187,40 @@
   height: 2rem;
   background-color: var(--pink-primair);
   border: none;
-  margin-right:4rem;
+  margin-right: 4rem;
   margin-top: 2rem;
   margin-left: -4rem;
   width: 3rem;
   border-radius: 0 1rem 1rem 1rem;
-  transition: 0.2s
+  transition: 0.2s;
 }
 
 .App-input_search__button:focus {
-outline: none;
+  outline: none;
 }
 
 .App-input_search__button:hover {
   background-color: var(--pink-primair-focus);
 }
 
-
 .App-h0-outlined {
   font-size: 8rem;
   -webkit-text-stroke: 2px var(--pink-darkbackground);
   color: transparent;
-  font-family: 'poppinsextrabold_italic'
+  font-family: "poppinsextrabold_italic";
 }
 
 .App-h0-notOutlined {
   font-size: 4rem;
   color: var(--pink-darkbackground);
-  font-family: 'poppinsextrabold_italic'
+  font-family: "poppinsextrabold_italic";
 }
-
 
 .App-h1-number {
   font-size: 5rem;
   -webkit-text-stroke: 1px var(--pink-darkbackground);
   color: transparent;
-  font-family: 'poppinsextrabold';
+  font-family: "poppinsextrabold";
   opacity: 0.6;
   margin-left: -2rem;
 }
@@ -234,7 +229,7 @@ outline: none;
   font-size: 5rem;
   -webkit-text-stroke: 1px var(--pink-primair);
   color: transparent;
-  font-family: 'poppinsextrabold';
+  font-family: "poppinsextrabold";
   opacity: 0.6;
   margin-left: -2rem;
 }
@@ -247,13 +242,13 @@ outline: none;
   display: flex;
   text-decoration: none;
   margin: 2rem;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .App-h1 {
   font-size: 3rem;
   color: var(--pink-darkbackground);
-  font-family: 'poppinsbold';
+  font-family: "poppinsbold";
   margin-top: -3rem;
   margin-bottom: 2rem;
 }
@@ -261,14 +256,14 @@ outline: none;
 .App-h1-primaircolor {
   font-size: 2rem;
   color: var(--pink-primair);
-  font-family: 'poppinsextrabold_italic';
+  font-family: "poppinsextrabold_italic";
   margin-top: -3rem;
   margin-bottom: 2rem;
 }
 
 .App-h2-home {
   color: var(--pink-darkbackground);
-  font-family: 'poppinsbold';
+  font-family: "poppinsbold";
   font-size: 2rem;
   padding-bottom: 1rem;
 }
@@ -281,15 +276,14 @@ outline: none;
 .App-body-bold {
   font-size: 1.2rem;
   line-height: 1.6rem;
-  font-family: 'poppinssemibold';
-  color: #563F45;
+  font-family: "poppinssemibold";
+  color: #563f45;
 }
 
 .App-background-header {
   height: 22rem;
-  background-image: url("../assets/images/header.png")
+  background-image: url("../assets/images/header.png");
 }
-
 
 .App-card {
   background-color: white;
@@ -299,12 +293,12 @@ outline: none;
   display: flex;
   text-decoration: none;
   margin: 2rem;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.1);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .App-card:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.05), 0 10px 10px rgba(0,0,0,0.05);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.05), 0 10px 10px rgba(0, 0, 0, 0.05);
 }
 
 /* .button {
@@ -335,15 +329,11 @@ outline: none;
   }
 }
 
-
 .App-navlink {
   text-decoration: none;
 }
 
-
-
 /* FORM */
-
 
 .App-formcontainer {
   color: black;
@@ -352,7 +342,7 @@ outline: none;
 .App-form-h1 {
   margin-top: 2rem;
   font-size: 2rem;
-  font-family: 'poppinsbold';
+  font-family: "poppinsbold";
   color: var(--brown-title);
   margin-bottom: 2rem;
 }
@@ -374,7 +364,6 @@ outline: none;
   margin-top: 3rem;
 }
 
-
 .App-form-input {
   padding: 0.5rem 1rem;
   margin: 0rem 1rem 1rem 0rem;
@@ -387,15 +376,27 @@ outline: none;
 
 .App-img_form {
   background-image: url("../assets/images/form/signup.png");
-  min-width: 40rem;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   background-position: center;
   background-size: cover;
   position: relative;
   margin-right: 3rem;
 }
 
+.gContainer {
+  display: block;
+  height: 100%;
+  width: 100%;
+  /* margin: 3rem 0; */
+}
 
+.gImg {
+  background-image: url("../assets/images/form/signup.png");
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 /* PROGRESSTRACKER */
 
@@ -488,7 +489,6 @@ ol.progtrckr li.progtrckr-done:before {
 ol.progtrckr li.progtrckr-done:hover:before {
   color: var(--pink-primair);
 }
-
 
 .App-button_form_container {
   display: flex;
