--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -7,3 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@custom-media --xs screen and (min-width: 0);
+@custom-media --sm screen and (min-width: 20em);
+ 
