--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,6 +1,11 @@
 @import "./typo.module.css";
 @import "./colors.module.css";
 
+.App-contentContainer {
+  max-width: 102rem;
+  margin: 0 auto;
+}
+
 .App {
   text-align: center;
 }
@@ -65,6 +70,7 @@
   border: 2px solid var(--pink-primair);
   color: var(--pink-primair);
   padding: 0.5rem 1rem;
+  max-width: 4rem;
   font-size: 1rem;
   font-family: "poppinsbold";
   border-radius: 0.5rem;
@@ -89,11 +95,13 @@
   border: 1px solid var(--pink-primair);
   color: white;
   padding: 0.5rem 1rem;
+  max-width: 9rem;
   font-size: 1rem;
   font-family: "poppinsbold";
   border-radius: 0.5rem;
   text-decoration: none;
   transition: all 0.2s;
+  cursor: pointer;
 }
 
 .App-button_secundair:hover {
@@ -333,12 +341,13 @@
   display: flex;
   flex-direction: column;
   margin-right: 2rem;
+  margin-bottom: 1rem;
 }
 
 .App-form-label {
   font-size: 1rem;
   margin-bottom: 0.5rem;
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 
 .App-form-input {
@@ -358,7 +367,6 @@
   background-position: center;
   background-size: cover;
   position: relative;
-  margin-right: 3rem;
 }
 
 .gContainer {
