--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -35,7 +35,7 @@
   display: flex;
   flex-direction: column;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
@@ -292,6 +292,12 @@
 .App-body {
   font-size: 1rem;
   line-height: 1.6rem;
+}
+
+.App-body-white {
+  font-size: 1rem;
+  line-height: 1.6rem;
+  color: white;
 }
 
 .App-body-bold {
