--- a/client/src/components/NavbarWhite.module.css
+++ b/client/src/components/NavbarWhite.module.css
@@ -3,7 +3,19 @@
     font-size: 1rem;
     margin: 2rem;
     text-decoration: none;
+    font-family: 'poppinsbold';
 }
+
+.nav_link__text:hover {
+    color: var(--pink-primair);
+    font-size: 1rem;
+    margin: 2rem;
+    text-decoration: none;
+    font-family: 'poppinsbold';
+}
+
+
+
 
 .nav_link__active {
     font-family: 'poppinsbold';
@@ -25,6 +37,7 @@
     margin-left: 0.7rem;
     margin-right: 1rem;
     height: 2rem;
+    font-family: 'poppinsbold';
 }
 
 .nav_link__dropdown:focus {
@@ -56,8 +69,31 @@
     font-size: 1rem;
     margin: 2rem;
     text-decoration: none;
+    font-family: 'poppinsbold';
 }
 
+.nav_link__textDark:hover {
+    color: var(--pink-primair);
+    font-size: 1rem;
+    margin: 2rem;
+    text-decoration: none;
+    font-family: 'poppinsbold';
+}
+
+
+.nav_link__textDark_logout {
+    background-color: var(--pink-primair);
+    color: white;
+    font-size: 1rem;
+    margin: 2rem;
+    text-decoration: none;
+    padding: 0.4rem 1rem;
+    font-family: 'poppinsbold';
+}
+
+.nav_link__textDark_logout:hover {
+    background-color: var(--pink-primair-focus);
+}
 
 .nav_link__dropdownDark{
     background-color: transparent;
@@ -67,7 +103,59 @@
     margin-left: 0.7rem;
     margin-right: 1rem;
     height: 2rem;
+    font-family: 'poppinsbold';
+}
+    
+
+
+
+
+
+nav ul li {
+	display: inline-block;
+	}
+
+nav a {
+	display:block;
+	padding:0 10px;	
+	font-size:20px;
+	line-height: 40px;
+    text-decoration:none;
+}
+
+/* nav a:hover { 
+	background-color: red; 
+} */
+
+/* Hide Dropdowns by Default */
+nav ul ul {
+	display: none;
+	position: absolute; 
+    top: 42px; /* the height of the main nav */
+}
+	
+/* Display Dropdowns on Hover */
+nav ul li:hover > ul {
+    display:inherit;
 }
 
 
 
+
+.arrowdown {
+    font-size: 0.7rem;
+}
+
+.containerNavbaaar {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    align-items: center;
+}
+
+
+.logoutIcon {
+    width: 1rem;
+    padding-right: 0.5rem;
+    margin-bottom: -0.1rem;
+}
