--- a/client/src/components/Race.module.css
+++ b/client/src/components/Race.module.css
@@ -25,7 +25,7 @@
   grid-template-rows: 45% 25px 45px;
   grid-template-areas:
     ". city . date"
-    ". country . ."
+    ". country country country"
     " . teams teams teams";
 }
 
