--- a/client/src/containers/Signup.module.css
+++ b/client/src/containers/Signup.module.css
@@ -80,22 +80,27 @@
   text-decoration: underline;
 }
 
-.container_signup {
+.container_login {
   composes: App-contentContainer from "../styles/App.css";
   display: grid;
-  margin-top: 3rem;
+  margin-top: 1rem;
   grid-template-columns: 1fr 1fr;
   grid-gap: 2rem;
   grid-template-areas:
-    "signup_img signup_form"
+    "signup_img login_form"
     "signup_img .";
 }
 
 @media (max-width: 800px) {
-  .container_signup {
+  .container_login {
     grid-gap: 0;
     grid-template-columns: 5% 1fr 5%;
-    grid-template-areas: ". signup_form .";
+    grid-template-areas: ". login_form .";
+  }
+
+  .name_container {
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -105,11 +110,17 @@
   max-height: 30rem;
 }
 
-.signup_form {
-  grid-area: signup_form;
+.login_form {
+  grid-area: login_form;
   width: 100%;
   max-width: 27rem;
   margin: 0 auto;
+  /* margin-left: 0; */
+}
+
+
+.signup_form {
+  grid-area: login_form;
 }
 
 .formcontainer {
@@ -302,7 +313,7 @@
 
 .bigtext {
   height: 8rem;
-  width: 30vw;
+  
   font-size: 1.2rem;
   text-align: start;
 }
