--- a/client/src/containers/SupporterOrGroup.module.css
+++ b/client/src/containers/SupporterOrGroup.module.css
@@ -40,6 +40,15 @@
 }
 
 
+@media (max-width: 900px) {
+    .container_cards {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+
 .cardlotgenoot_navlink {
     color: white;
     text-decoration:none;
