--- a/client/src/components/NavbarWhite.module.css
+++ b/client/src/components/NavbarWhite.module.css
@@ -1,127 +1,122 @@
 .nav_link__text {
-    color: black;
-    font-size: 1rem;
-    margin: 2rem;
-    text-decoration: none;
-    font-family: 'poppinsbold';
+  color: black;
+  font-size: 1rem;
+  margin: 2rem;
+  text-decoration: none;
+  font-family: "poppinsbold";
 }
 
 .nav_link__text:hover {
-    color: var(--pink-primair);
-    font-size: 1rem;
-    margin: 2rem;
-    text-decoration: none;
-    font-family: 'poppinsbold';
+  color: var(--pink-primair);
+  font-size: 1rem;
+  margin: 2rem;
+  text-decoration: none;
+  font-family: "poppinsbold";
 }
 
-
-
-
 .nav_link__active {
-    font-family: 'poppinsbold';
-    color: #EE77A0;
+  font-family: "poppinsbold";
+  color: #ee77a0;
 }
 
 .nav_container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; 
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 10rem;
 }
 
-.nav_link__dropdown{
-    background-color: transparent;
-    color: black;
-    border: none;
-    font-size: 1rem;
-    margin-left: 0.7rem;
-    margin-right: 1rem;
-    height: 2rem;
-    font-family: 'poppinsbold';
+.nav_link__dropdown {
+  background-color: transparent;
+  color: black;
+  border: none;
+  font-size: 1rem;
+  margin-left: 0.7rem;
+  margin-right: 1rem;
+  height: 2rem;
+  font-family: "poppinsbold";
 }
 
 .nav_link__dropdown:focus {
-    outline: none;
+  outline: none;
 }
 
 .language_flag {
-    width: 1.2rem;
-    margin-left: 3rem;
-    margin-bottom: -0.3rem;
+  width: 1.2rem;
+  margin-left: 3rem;
+  margin-bottom: -0.3rem;
 }
 
 .personIcon {
-    margin-bottom: -0.1rem;
-    margin-right: 0.5rem;
+  margin-bottom: -0.1rem;
+  margin-right: 0.5rem;
 }
 
 .personFoto {
-    margin-bottom: -0.6rem;
-    margin-right: 0.5rem;
-    width: 2rem;
-    height: 2rem;
+  margin-bottom: -0.6rem;
+  margin-right: 0.5rem;
+  width: 2rem;
+  height: 2rem;
 }
 
 /* DARK */
 
 .nav_link__textDark {
-    color: white;
-    font-size: 1rem;
-    margin: 2rem;
-    text-decoration: none;
-    font-family: 'poppinsbold';
+  color: white;
+  font-size: 1rem;
+  margin: 2rem;
+  text-decoration: none;
+  font-family: "poppinsbold";
 }
 
 .nav_link__textDark:hover {
-    color: var(--pink-primair);
-    font-size: 1rem;
-    margin: 2rem;
-    text-decoration: none;
-    font-family: 'poppinsbold';
+  color: var(--pink-primair);
+  font-size: 1rem;
+  margin: 2rem;
+  text-decoration: none;
+  font-family: "poppinsbold";
 }
 
 .nav_link__textDark_logout {
-    background-color: var(--pink-primair);
-    color: white;
-    font-size: 1rem;
-    margin: 2rem;
-    text-decoration: none;
-    padding: 0.4rem 1rem;
-    font-family: 'poppinsbold';
+  background-color: var(--pink-primair);
+  color: white;
+  font-size: 1rem;
+  margin: 2rem;
+  text-decoration: none;
+  padding: 0.4rem 1rem;
+  font-family: "poppinsbold";
 }
 
 .nav_link__textDark_logout:hover {
-    background-color: var(--pink-primair-focus);
+  background-color: var(--pink-primair-focus);
 }
 
-.nav_link__dropdownDark{
-    background-color: transparent;
-    color: white;
-    border: none;
-    font-size: 1rem;
-    margin-left: 0.7rem;
-    margin-right: 1rem;
-    height: 2rem;
-    font-family: 'poppinsbold';
+.nav_link__dropdownDark {
+  background-color: transparent;
+  color: white;
+  border: none;
+  font-size: 1rem;
+  margin-left: 0.7rem;
+  margin-right: 1rem;
+  height: 2rem;
+  font-family: "poppinsbold";
 }
-    
+
 .nav_link__dropdownDark:focus {
-    outline: none;
+  outline: none;
 }
-
-
-
 
 nav ul li {
-	display: inline-block;
-	}
+  display: inline-block;
+}
 
 nav a {
-	display:block;
-	padding:0 10px;	
-	font-size:20px;
-	line-height: 40px;
-    text-decoration:none;
+  display: block;
+  padding: 0 10px;
+  font-size: 20px;
+  line-height: 40px;
+  text-decoration: none;
 }
 
 /* nav a:hover { 
@@ -130,33 +125,52 @@ nav a {
 
 /* Hide Dropdowns by Default */
 nav ul ul {
-	display: none;
-	position: absolute; 
-    top: 42px; /* the height of the main nav */
+  display: none;
+  position: absolute;
+  top: 42px; /* the height of the main nav */
 }
-	
+
 /* Display Dropdowns on Hover */
 nav ul li:hover > ul {
-    display:inherit;
+  display: inherit;
 }
 
-
-
-
 .arrowdown {
-    font-size: 0.7rem;
+  font-size: 0.7rem;
 }
 
 .containerNavbaaar {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  align-items: center;
 }
 
+@media screen and (max-width: 600px) {
+  .line {
+    width: 30px;
+    height: 3px;
+    background: white;
+    margin: 7px;
+  }
+
+  .nav_container {
+  }
+
+  .hamburger {
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top: 5%;
+    transform: translate(-5%, -50%);
+  }
+
+  .containerNavbaaar {
+  }
+}
 
 .logoutIcon {
-    width: 1rem;
-    padding-right: 0.5rem;
-    margin-bottom: -0.1rem;
+  width: 1rem;
+  padding-right: 0.5rem;
+  margin-bottom: -0.1rem;
 }
